[tool.poetry]
name = "robust-python"
version = "0.1.0"
description = "ロバストフルなPythonを書いてみる"
authors = ["yuya-morimoto <my.hack.0312@gmail.com>"]
readme = "README.md"
packages = [{include = "robust_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# vscode-file://vscode-app/Applications/Visual%20Studio%20Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.mypy]
python_version = "3.11"
mypy_path = "./out"
strict = true
strict_optional = true
disallow_any_expr = true

[tool.poetry.scripts]
sample = "robust_python.sample:main"
type_tech = "robust_python.type_tech:main"

